<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.CrearExposicion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:text="@string/anadirExposicion"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"/>

        <EditText
            android:id="@+id/tx_addIdExposicionComent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/idExposicion"
            android:inputType="number"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>

        <EditText
            android:id="@+id/tx_addNombreExpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/nombreExposicion"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/tx_addDescExposicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/descExpo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/tx_fecInicioExpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/fecIn"
            android:inputType="date" />

        <EditText
            android:id="@+id/tx_fecFinExpo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:hint="@string/fecFin"
            android:inputType="date" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_crearArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/bt_crearExpo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/bt_volverArtAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:text="@string/bt_volver"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</FrameLayout>